--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arioso-cafe",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "deploy": "firebase deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
